Resync build.gradle